# PhotoTimeSleuth

./: .gitignore  .pylintrc  PhotoTimeSleuth.spec  README.md  pyproject.toml
PhotoTimeSleuth/: app.py  default_bday.txt  image_helper.py
PhotoTimeSleuth/Helpers/: ai_helper.py  basic_helper.py  date_helper.py  file_helper.py  image_helper.py
PhotoTimeSleuth/static/css/: style.css
PhotoTimeSleuth/static/js/: script.js
PhotoTimeSleuth/templates/: index.html
tests/: test_date_helper.py  test_file_helper.py
