[project]
name = "phototimesleuth"
version = "0.1.0"
description = "Photo metadata timestamp fixer"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "flask>=3.1.0",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "psutil>=7.0.0",
    "pyinstaller>=6.12.0",
    "pywebview>=5.4",
    "ruff>=0.9.3",
]

[project.scripts]
phototimesleuth = "PhotoTimeSleuth.app:main"  # Ensure lowercase script name

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["PhotoTimeSleuth*"]  # Ensure this matches your package directory

[tool.setuptools.package-data]
"PhotoTimeSleuth" = ["templates/*.html", "static/**/*", "default_bday.txt"]

